--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Ikwemogena Abdulai",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
