chore: Update setup tsconfig.json, eslint configuration, and next.config.js file

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,7 +24,8 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "moduleResolution": "NodeNext"
   },
   "include": [
     "next-env.d.ts",
