--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chimoney",
+  "name": "chimoney-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,8 +21,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^9.2.0",
     "eslint-config-next": "14.2.3",
-    "typescript": "^5"
+    "sass": "^1.77.0",
+    "typescript": "5.4.5"
   }
 }
