--- a/client/package.json
+++ b/client/package.json
@@ -28,5 +28,8 @@
     "eslint-config-next": "14.2.3",
     "sass": "^1.77.0",
     "typescript": "5.4.5"
+  },
+  "engines": {
+    "node": ">=21"
   }
 }
